Fix fonts on mobile

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -2,6 +2,11 @@
 //= require_self
 //= require_tree .
 
+@font-face
+  font-family: 'Comic Sans MS'
+  src: font-url('Comic_Sans_MS.ttf') format('truetype')
+
+
 html, body
   background-color: #fff
   height: 100%
@@ -12,7 +17,7 @@ html, body
 body *
   outline: none
   cursor: default
-  font-family: cursive
+  font-family: Comic Sans MS, Comic Sans, cursive
 
 .centered
   left: 50%
